--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,12 @@
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "include": [
+      "src/*"
+    ],
+    "exclude": [
+      "./node_modules/@types/*",
+    ]
   }
 }
