--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "upload": "rm -rf ./dist/* && tsc && cd ./dist && jar -cfM ./dist.zip ./* && aws lambda update-function-code --profile lmb-aws --region ap-southeast-1 --function-name lmb-todo-api --zip-file fileb://dist.zip && rm dist.zip && cd .."
+    "upload": "rm -rf ./dist/* && tsc && cd ./dist && npm install && jar -cfM ./dist.zip ./* && aws lambda update-function-code --profile lmb-aws --region ap-southeast-1 --function-name lmb-todo-api --zip-file fileb://dist.zip && rm dist.zip && cd .."
   },
   "author": "",
   "license": "ISC",
