--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
+    "resolveJsonModule": true,
     /* Projects */
     // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
     // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
@@ -99,11 +100,9 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "include": [
-      "src/*"
-    ],
-    "exclude": [
-      "./node_modules/@types/*",
-    ]
-  }
+  },
+  "include": ["./package.json", "./**/*"]
+  // "exclude": [
+  //   "./node_modules/@types/*",
+  // ]
 }
